--- a/app/src/main/res/navigation/main_graph.xml
+++ b/app/src/main/res/navigation/main_graph.xml
@@ -7,8 +7,7 @@
 
     <fragment
         android:id="@+id/homeFragment"
-        android:name="com.mondialrelay.chucknorrisapp.ui.home.HomeFragment"
+        android:name="com.mondialrelay.chucknorrisapp.application.ui.home.HomeFragment"
         android:label="HomeFragment"
-        tools:layout="@layout/fragment_main"
-        />
+        tools:layout="@layout/fragment_home" />
 </navigation>
