--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -13,4 +13,11 @@
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
     </style>
+
+
+    <style name="defaultFontStyle" parent="android:TextAppearance.DeviceDefault.Large">
+        <item name="android:textColor">@color/purple_700</item>
+        <item name="android:typeface">monospace</item>
+    </style>
+
 </resources>
