--- a/app/src/main/res/navigation/main_graph.xml
+++ b/app/src/main/res/navigation/main_graph.xml
@@ -3,11 +3,18 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main_graph"
-    app:startDestination="@id/homeFragment">
+    app:startDestination="@id/swipeAndRecyclerFragment">
 
     <fragment
         android:id="@+id/homeFragment"
         android:name="com.mondialrelay.chucknorrisapp.application.ui.home.SwipeFragment"
         android:label="HomeFragment"
         tools:layout="@layout/fragment_swipe" />
+
+    <fragment
+        android:id="@+id/swipeAndRecyclerFragment"
+        android:name="com.mondialrelay.chucknorrisapp.application.ui.home.SwipeAndRecyclerFragment"
+        android:label="SwipeAndRecyclerFragment"
+        tools:layout="@layout/fragment_swipe_and_recycler" />
+
 </navigation>
