--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.ChuckNorrisApp" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.ChuckNorrisApp" parent="Theme.Material3.Light.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/purple_500</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
@@ -15,7 +15,7 @@
     </style>
 
 
-    <style name="defaultFontStyle" parent="android:TextAppearance.DeviceDefault.Large">
+    <style name="defaultFontStyle" parent="TextAppearance.Material3.BodyMedium">
         <item name="android:textColor">@color/purple_700</item>
         <item name="android:typeface">monospace</item>
     </style>
